--- a/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
+++ b/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
@@ -1,58 +1,65 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Copyright>Copyright © 2020 Blitzkrieg Software</Copyright>
-    <Company>Blitzkrieg Software</Company>
-    <Description>Demo using RabbitMQ in DotNet Core</Description>
-    <InformationalVersion>1.1.0</InformationalVersion>
-    <FileVersion>1.1.0</FileVersion>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <PackageIcon>favicon_32x32_o7Z_icon.ico</PackageIcon>
-    <PackageIconUrl />
-    <RepositoryType>Git</RepositoryType>
-    <RepositoryUrl>https://github.com/BlitzkriegSoftware/RabbitMqDemo</RepositoryUrl>
-    <PackageTags>RabbitMqDemo</PackageTags>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
-    <AssemblyName>RabbitMqDemo</AssemblyName>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<Copyright>Copyright © 2020-2022 Blitzkrieg Software</Copyright>
+		<Company>Blitzkrieg Software</Company>
+		<Description>Demo using RabbitMQ in DotNet Core</Description>
+		<InformationalVersion>2.0.0</InformationalVersion>
+		<FileVersion>2.0.0</FileVersion>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<PackageIcon>favicon_32x32_o7Z_icon.ico</PackageIcon>
+		<PackageIconUrl />
+		<RepositoryType>Git</RepositoryType>
+		<RepositoryUrl>https://github.com/BlitzkriegSoftware/RabbitMqDemo</RepositoryUrl>
+		<PackageTags>RabbitMqDemo</PackageTags>
+		<AssemblyVersion>2.0.0</AssemblyVersion>
+		<AssemblyName>RabbitMqDemo</AssemblyName>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<PlatformTarget>x64</PlatformTarget>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="rabbitmqconfig.json" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="rabbitmqconfig.json" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Content Include="rabbitmqconfig.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Content Include="rabbitmqconfig.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CommandLineParser" Version="2.7.82" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.3" />
-    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+	</ItemGroup>
+	
+	<ItemGroup>
+		<PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
+		<PackageReference Include="CommandLineParser" Version="2.8.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="SecurityCodeScan" Version="3.5.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="2.9.8">
-      <PrivateAssets>All</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
+		<PackageReference Include="SecurityCodeScan.VS2019" Version="5.6.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Blitz.RabbitMq.Library\Blitz.RabbitMq.Library.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Vsxmd" Version="1.4.5">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Blitz.RabbitMq.Library\Blitz.RabbitMq.Library.csproj" />
+	</ItemGroup>
 </Project>
