Updates and Unit of Work Demo

--- a/Blitz.RabbitMq.Console/Properties/launchSettings.json
+++ b/Blitz.RabbitMq.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Blitz.RabbitMq.Demo": {
       "commandName": "Project",
-      "commandLineArgs": "-v -m 100"
+      "commandLineArgs": "-v -m 100 -s -d"
     }
   }
 }
