--- a/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
+++ b/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<LangVersion>9.0</LangVersion>
 		<Copyright>Copyright © 2020-2022 Blitzkrieg Software</Copyright>
 		<Company>Blitzkrieg Software</Company>
 		<Description>Demo using RabbitMQ in DotNet Core</Description>
@@ -16,6 +17,8 @@
 		<PackageTags>RabbitMqDemo</PackageTags>
 		<AssemblyVersion>2.0.0</AssemblyVersion>
 		<AssemblyName>RabbitMqDemo</AssemblyName>
+		<EnableNETAnalyzers>True</EnableNETAnalyzers>
+		<AnalysisLevel>latest</AnalysisLevel>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -33,6 +36,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BlitzkriegSoftware.SecureRandomLibrary" Version="1.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
