--- a/Blitz.RabbitMq.Library/Blitz.RabbitMq.Library.csproj
+++ b/Blitz.RabbitMq.Library/Blitz.RabbitMq.Library.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
+		<LangVersion>9.0</LangVersion>
 		<ApplicationIcon>favicon_32x32_o7Z_icon.ico</ApplicationIcon>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Description>A helper library over the RabbitMq NuGet</Description>
