--- a/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
+++ b/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
@@ -41,6 +41,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+		<PackageReference Include="NetEscapades.Extensions.Logging.RollingFile" Version="2.4.1" />
 	</ItemGroup>
 	
 	<ItemGroup>
