Updated Demo for .NET 6 and latest libraries. Also Added PowerShell support

--- a/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
+++ b/Blitz.RabbitMq.Console/Blitz.RabbitMq.Demo.csproj
@@ -2,23 +2,28 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>9.0</LangVersion>
 		<Copyright>Copyright © 2020-2022 Blitzkrieg Software</Copyright>
 		<Company>Blitzkrieg Software</Company>
 		<Description>Demo using RabbitMQ in DotNet Core</Description>
-		<InformationalVersion>2.0.0</InformationalVersion>
-		<FileVersion>2.0.0</FileVersion>
-		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<InformationalVersion>2.6.0</InformationalVersion>
+		<Version>2.6.0</Version>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageIcon>favicon_32x32_o7Z_icon.ico</PackageIcon>
 		<PackageIconUrl />
 		<RepositoryType>Git</RepositoryType>
 		<RepositoryUrl>https://github.com/BlitzkriegSoftware/RabbitMqDemo</RepositoryUrl>
 		<PackageTags>RabbitMqDemo</PackageTags>
-		<AssemblyVersion>2.0.0</AssemblyVersion>
 		<AssemblyName>RabbitMqDemo</AssemblyName>
 		<EnableNETAnalyzers>True</EnableNETAnalyzers>
 		<AnalysisLevel>latest</AnalysisLevel>
+		<ApplicationIcon>favicon_32x32_o7Z_icon.ico</ApplicationIcon>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<DocumentationFile>.\Blitz.RabbitMq.Demo.xml</DocumentationFile>
+		<Title>A Rabbit MQ Demo</Title>
+		<Authors>Stuart Williams</Authors>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -30,28 +35,40 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Include="favicon_32x32_o7Z_icon.ico" />
 		<Content Include="rabbitmqconfig.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BlitzkriegSoftware.SecureRandomLibrary" Version="1.0.3" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+	  <None Include="..\LICENSE">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="BlitzkriegSoftware.SecureRandomLibrary" Version="1.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="NetEscapades.Extensions.Logging.RollingFile" Version="2.4.1" />
 	</ItemGroup>
 	
 	<ItemGroup>
-		<PackageReference Include="RabbitMQ.Client" Version="6.2.4" />
-		<PackageReference Include="CommandLineParser" Version="2.8.0" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+		<PackageReference Include="CommandLineParser" Version="2.9.1" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.1.0" />
-		<PackageReference Include="SecurityCodeScan.VS2019" Version="5.6.2">
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
+		<PackageReference Include="SecurityCodeScan.VS2019" Version="5.6.7">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
