--- a/StuartWilliams.RabbitMq.Library/StuartWilliams.RabbitMq.Library.csproj
+++ b/StuartWilliams.RabbitMq.Library/StuartWilliams.RabbitMq.Library.csproj
@@ -3,29 +3,73 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<LangVersion>9.0</LangVersion>
-		<ApplicationIcon>favicon_32x32_o7Z_icon.ico</ApplicationIcon>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<Version>1.8.0</Version>
+		<InformationalVersion>1.8.0</InformationalVersion>
+	</PropertyGroup>
+
+	<PropertyGroup>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<ApplicationIcon>Circle-Me.ico</ApplicationIcon>
 		<Description>A helper library over the RabbitMq NuGet</Description>
-		<Copyright>(c) 2021-2022</Copyright>
+		<Copyright>(c) 2021-2024</Copyright>
 		<PackageProjectUrl>https://github.com/BlitzkraiegSoftware/RabbitMqDemo</PackageProjectUrl>
-		<PackageIcon>Me-128.png</PackageIcon>
-		<PackageReadmeFile>Blitz.RabbitMq.Library.md</PackageReadmeFile>
+		<PackageIcon>Circle-Me.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/BlitzkraiegSoftware/RabbitMqDemo</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>rabbitmq;demo;leasing</PackageTags>
+		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+		<Title>Helpers for RabbitMQ</Title>
+		<Authors>Stuart Williams</Authors>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<PackageReleaseNotes>
+			1.8.x - NuGet new namespaces, cleanup
+			1.6.x - OG
+		</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<DocumentationFile>.\Blitz.RabbitMq.Library.xml</DocumentationFile>
+		<DocumentationFile>.\StuartWilliams.RabbitMq.Library.xml</DocumentationFile>
 		<PlatformTarget>x64</PlatformTarget>
+		<DebugType>embedded</DebugType>
+		<WarningLevel>5</WarningLevel>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>embedded</DebugType>
+	  <WarningLevel>5</WarningLevel>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Content Include="favicon_32x32_o7Z_icon.ico" />
+		<Content Include="Circle-Me.ico" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
+	  <None Include="..\Circle-Me.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\LICENSE">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
 		<PackageReference Include="SecurityCodeScan.VS2019" Version="5.6.7">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -35,8 +79,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-		<PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -51,7 +95,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Update="Blitz.RabbitMq.Library.md">
+		<None Update="StuartWilliams.RabbitMq.Library.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
